--- a/NotasAlumnosFX/src/Vista/MenuDocente.fxml
+++ b/NotasAlumnosFX/src/Vista/MenuDocente.fxml
@@ -24,5 +24,6 @@
       <Button layoutX="340.0" layoutY="435.0" mnemonicParsing="false" onAction="#btnImprimirBoletines" text="Imprimir Boletínes" />
       <Button layoutX="340.0" layoutY="516.0" mnemonicParsing="false" onAction="#btnCerrarSesion" text="Cerrar sesión" />
       <Button fx:id="btnCambiarContrasenia" layoutX="56.0" layoutY="516.0" mnemonicParsing="false" onAction="#btnCambiarContrasenia" prefWidth="247.0" text="Cambiar Contraseña" />
+      <Button layoutX="192.0" layoutY="282.0" mnemonicParsing="false" onAction="#btnCarnet" text="Carnet" />
    </children>
 </AnchorPane>
